--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About me: I'm a Front-end developer from Bogotá, Colombia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>About Laura</title>
+    <title>About me | Laura Gómez</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
@@ -55,13 +59,25 @@
       </div>
       <div class="row mb-5">
         <div class="col-sm-4">
-          <img class="img-fluid p-2 rounded shadow" src="images/yoga.png" />
+          <img
+            class="img-fluid p-2 rounded shadow"
+            src="images/yoga.png"
+            alt="Yoga front-end project"
+          />
         </div>
         <div class="col-sm-4">
-          <img class="img-fluid p-2 rounded shadow" src="images/weather.png" />
+          <img
+            class="img-fluid p-2 rounded shadow"
+            src="images/weather.png"
+            alt="weather front-end project"
+          />
         </div>
         <div class="col-sm-4">
-          <img class="img-fluid p-2 rounded shadow" src="images/yogurt.png" />
+          <img
+            class="img-fluid p-2 rounded shadow"
+            src="images/yogurt.png"
+            alt="Yogurt front-end project"
+          />
         </div>
       </div>
     </div>
