--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laura Gomez</title>
+    <meta
+      name="description"
+      content="Hi! I'm Laura Gómez front-end developer, based in Portugal."
+    />
+    <title>Front-end Developer - Laura Gomez</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,13 +51,19 @@
     <h1>Laura Gómez</h1>
     <h3>🇨🇴 Front-end developer, based in Portugal</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact me"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About me">About me</a>
     </div>
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6">
-          <img class="yoga img-fluid rounded" src="images/yoga.png" />
+          <img
+            class="yoga img-fluid rounded"
+            src="images/yoga.png"
+            alt="Yoga front-end project"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3 text-start">Yoga app</h2>
@@ -82,16 +92,25 @@
           <a
             class="btn btn-primary btn-md mt-3 mb-5 rounded p-3 text-capitalize"
             href="#"
+            title="Launch weather app"
             >Launch weather app</a
           >
         </div>
         <div class="col-md-6">
-          <img class="img-fluid rounded" src="images/weather.png" />
+          <img
+            class="img-fluid rounded"
+            src="images/weather.png"
+            alt="weather front-end project"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img class="yogurt img-fluid rounded" src="images/yogurt.png" />
+          <img
+            class="yogurt img-fluid rounded"
+            src="images/yogurt.png"
+            alt="Yogurt front-end project"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3 text-start">Yogurt app</h2>
@@ -104,6 +123,7 @@
           <a
             class="btn btn-primary btn-md mt-3 rounded p-3 text-capitalize"
             href="#"
+            title="Launch yogurt app"
             >Launch yogurt app</a
           >
         </div>
