--- a/about.html
+++ b/about.html
@@ -83,8 +83,8 @@
     </div>
 
     <div id="contact">
-      <h2>📮 Contact me</h2>
-      <a href="mailto:lauragomezb0904@gmail.com" class="email-link">
+      <h2 class="contact-title">📮 Contact me</h2>
+      <a href="mailto:lauragomezb0904@gmail.com" class="email-link mb-5">
         lauragomezb0904@gmail.com
       </a>
     </div>
