--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Hi! I'm Laura Gómez front-end developer, based in Portugal."
     />
-    <title>Front-end Developer - Laura Gomez</title>
+    <title>Front-end Developer | Laura Gomez</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -65,7 +65,7 @@
             alt="Yoga front-end project"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3">
           <h2 class="mb-3 text-start">Yoga app</h2>
           <p class="yoga-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -112,7 +112,7 @@
             alt="Yogurt front-end project"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3">
           <h2 class="mb-3 text-start">Yogurt app</h2>
           <p class="yogurt-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -121,7 +121,7 @@
             explicabo eum dolore.
           </p>
           <a
-            class="btn btn-primary btn-md mt-3 rounded p-3 text-capitalize"
+            class="btn btn-primary btn-md mt-3 mb-5 rounded p-3 text-capitalize"
             href="#"
             title="Launch yogurt app"
             >Launch yogurt app</a
