--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Laura Gómez</a>
+        <a class="navbar-brand" href="/">Laura Gómez</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,10 +38,10 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -51,17 +51,17 @@
     <h1>Laura Gómez</h1>
     <h3>🇨🇴 Front-end developer, based in Portugal</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link" title="Contact me"
+      <a href="/about.html#contact" class="contact-link" title="Contact me"
         >Contact me</a
       >
-      <a href="about.html" class="about-link" title="About me">About me</a>
+      <a href="/about.html" class="about-link" title="About me">About me</a>
     </div>
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6">
           <img
             class="yoga img-fluid rounded"
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga front-end project"
           />
         </div>
@@ -99,7 +99,7 @@
         <div class="col-md-6">
           <img
             class="img-fluid rounded"
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="weather front-end project"
           />
         </div>
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <img
             class="yogurt img-fluid rounded"
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="Yogurt front-end project"
           />
         </div>
